whoami/traefik-whoami.yaml
apiVersion: v1
kind: Service
metadata:
 name: traefik-whoami
 namespace: default
spec:
 ports:
   - port: 8000
     targetPort: 80
 selector:
   app: traefik-whoami
---
apiVersion: apps/v1
kind: Deployment
metadata:
 name: traefik-whoami
 namespace: default
spec:
 selector:
   matchLabels:
     app: traefik-whoami
 template:
   metadata:
     labels:
       app: traefik-whoami
   spec:
     containers:
       - name: traefik-whoami
        #  image: registry.localhost:5000/traefik-whoami
         image: traefik/whoami
         ports:
           - name: web
             containerPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-whoami
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        # - whoami.localhost
        - whoami.localtest.me
      # secretName: wildcard-localhost-tls
      secretName: wildcard-localtest-me-tls
  rules:
    # - host: "whoami.localhost"
    - host: "whoami.localtest.me"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik-whoami
                port:
                  number: 8000
